20442
Pasting with custom prompt is supposed to work.
```
$ scala -Dscala.repl.prompt="%nevil scala> "
Welcome to Scala 2.12.1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_111).
Type in expressions for evaluation. Or try :help.

evil scala> 42
res0: Int = 42

evil scala> evil scala> 42
<console>:1: error: ';' expected but integer literal found.
evil scala> 42
            ^

evil scala> res0: Int = 42
<console>:1: error: ';' expected but '=' found.
res0: Int = 42
          ^

evil scala> 
```
